--- a/majom.css
+++ b/majom.css
@@ -22,6 +22,14 @@
     color: #fff;
     padding: 20px;
   }
+
+  footer{
+      background-image: url(https://images.pexels.com/photos/4870771/pexels-photo-4870771.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+      background-position: right;
+      background-color: green;
+      color: #fff;
+      padding: 20px;
+  }
   
   header h1 {
     font-size: 36px;
@@ -68,6 +76,7 @@
   }
 
   img{
+    border-radius: 1rem;
     display: flex;
     text-align: center;
     margin: auto;
@@ -77,4 +86,16 @@
 
   .menu{
     text-align: center;
+  }
+
+  #balogh{
+    float: right;
+    width: 150px;
+    height: 100px;
+  }
+
+  .link,a:hover{
+    color: whitesmoke;
+    font-size: x-large;
+    text-decoration: none;
   }
