--- a/majom.css
+++ b/majom.css
@@ -36,10 +36,6 @@
     margin: 0;
   }
 
-    ol>li{
-      margin-left: 50px;
-    }
-
   main {
     max-width: 800px;
     margin: 0 auto;
@@ -66,7 +62,7 @@
     text-align: center;
     font-size: larger;
     display: inline-flex;
-    color: lightseagreen;
+    color: darkslategray;
   }
 
   a:hover{
@@ -124,5 +120,23 @@
   
   tbody tr:hover {
     background-color: #e6f7ff;
+  }
+
+  ul {
+    list-style-type: disc;
+    margin: 0;
+    padding: 0;
+  }
+  
+  ol {
+    list-style-type: decimal;
+    margin: 0;
+    padding: 0;
+    margin-left: 20px;
+  }
+  
+  li {
+    margin: 20px 0;
+    padding: 0;
   }
   
