--- a/majom.css
+++ b/majom.css
@@ -139,4 +139,11 @@
     margin: 20px 0;
     padding: 0;
   }
+
+  @media screen and (max-width: 500px) {
+    img{
+      display: none;
+    }
+    
+  }
   
