--- a/majom.css
+++ b/majom.css
@@ -13,6 +13,14 @@
     color: #333;
     background-color: beige
   }
+  .nav{
+    width: 200px;
+    height: 80vh;
+    position: absolute;
+    top: 25;
+    left: 0;
+    background-color: beige;
+  }
   
 
   header {
@@ -78,6 +86,7 @@
     margin: auto;
     height: 450px;
     width: 700px;
+    margin-top: 30px;
   }
 
   .menu{
